[project]
name = "air-bnb-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Nassanalytics",email = "nassim.naoui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)",
    "polars (>=1.39.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongoarrow (>=1.13.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "air_bnb_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
